[project]
name = "comfyui-save-json"
description = "Save JSON output to disk from any ComfyUI node"
version = "1.0.1"
license = { file = "LICENSE.txt" }
dependencies = []

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/YOUR_REPO"

[tool.comfy]
PublisherId = "clorb"
DisplayName = "Save JSON"
Icon = ""
